--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Calculator</string>
+    <string name="app_name">Calculator_wy</string>
 
     <string name="zero">0</string>
     <string name="doubleZero">00</string>
@@ -19,11 +19,11 @@
     <string name="multiple">×</string>
     <string name="add">+</string>
     <string name="subtract">-</string>
-    <string name="plusMinus">+/-</string>
+    <string name="plusMinus">없음</string>
     <string name="equals">=</string>
     <string name="backspace">&lt;-</string>
     <string name="display">0</string>
     <string name="percentBTN">%</string>
-
+    <string name="result"></string>
 
 </resources>
